--- a/jour03/job02/index.css
+++ b/jour03/job02/index.css
@@ -15,6 +15,7 @@ button {
     border: 1px solid #000;
     display: flex;
     justify-content: center;
+    flex-direction: row;
     margin-left: auto;
     margin-right: auto;
     min-width: 500px;
@@ -26,6 +27,10 @@ button {
 .container, .container2 {
     margin-top: 15px;
     margin-bottom: 15px;
+}
+
+#arc1 {
+    display: inline-flex;
 }
 
 .container2 {
