--- a/jour05/css/signin.css
+++ b/jour05/css/signin.css
@@ -7,8 +7,7 @@
 }
 
 body {
-    background: rgb(0,201,167);
-    background: linear-gradient(236deg, rgba(0,201,167,1) 40%, rgba(132,94,194,1) 60%);
+    background: rgb(235, 235, 235);
     background-repeat: no-repeat;
     height: 100vh;
 }
@@ -59,4 +58,126 @@ form input {
     height: 35px;
     margin-right: auto;
     width: 20vw;
+}
+
+button {
+    margin-top: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    background-color: #5dab9d;
+    border-radius: 5px;
+    box-shadow: rgb(77, 128, 118) 0px 4px 0px 0px;
+    padding: 15px;
+    background-repeat: no-repeat;
+    box-sizing: border-box;
+    width: 154px;
+    height: 49px;
+    color: #fff;
+    border: none;
+    font-size: 20px;
+    transition: all .3s ease-in-out;
+    z-index: 1;
+    overflow: hidden;
+}
+
+button::before {
+    content: "";
+    background-color: #00C9A7;
+    width: 0;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: width 600ms ease-in-out;
+    display: inline-block;
+}
+
+button:hover::before {
+    width: 100%;
+}
+
+input {
+    width: 100%;
+    max-width: 220px;
+    height: 45px;
+    padding: 12px;
+    border-radius: 12px;
+    border: 1.5px solid lightgrey;
+    outline: none;
+    transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+    box-shadow: 0px 0px 20px -18px;
+}
+
+input:hover {
+    border: 2px solid lightgrey;
+    box-shadow: 0px 0px 20px -17px;
+}
+
+input:active {
+    transform: scale(0.95);
+}
+
+input:focus {
+    border: 2px solid grey;
+}
+
+form {
+    text-decoration: none;
+    position: relative;
+    border: 2px solid #000;
+    font-size: 14px;
+    font-family: inherit;
+    color: #fff;
+    line-height: 2em;
+    text-align: center;
+    background: linear-gradient(90deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
+    background-size: 300%;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10vh;
+    width: 35vw;
+    padding: 3%;
+    border-radius: 5px;
+}
+
+form {
+    animation: ani 8s linear infinite;
+}
+
+@keyframes ani {
+    0% {
+        background-position: 0%;
+    }
+
+    100% {
+        background-position: 400%;
+    }
+}
+
+form:before {
+    content: '';
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    right: -5px;
+    bottom: -5px;
+    z-index: -1;
+    background: linear-gradient(90deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
+    background-size: 400%;
+    border-radius: 5px;
+    transition: 1s;
+}
+
+form::before {
+    filter: blur(20px);
+}
+
+form:active {
+    background: linear-gradient(32deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
 }
